EmailVerification_and_resendVerificationLink
